--- a/assets/images/sprites/icons.fallback.css
+++ b/assets/images/sprites/icons.fallback.css
@@ -20,6 +20,8 @@
 
 .icon-caret-right { background-image: url('png/caret-right.png'); background-repeat: no-repeat; }
 
+.icon-cart { background-image: url('png/cart.png'); background-repeat: no-repeat; }
+
 .icon-check-icon2 { background-image: url('png/check-icon2.png'); background-repeat: no-repeat; }
 
 .icon-check { background-image: url('png/check.png'); background-repeat: no-repeat; }
