--- a/app/views/frontend/components/video_thumb/video_thumb_main.twig
+++ b/app/views/frontend/components/video_thumb/video_thumb_main.twig
@@ -1,15 +1,20 @@
-<div class="theme_main_video">
-    <div class="theme_main_video_top">
-        <div class="theme_main_video_top_image">
-            <img src="/assets/images/static/way2.jpg" alt="">
+{% import 'frontend/elements/svg/svg_macros.twig' as Svg %}
+<div class="theme_main_video_wr js_select_video">
+    <input type="checkbox" class="theme_main_video_checkbox js_select_video_checkbox" checked>
+    <div class="theme_main_video ">
+        <div class="theme_main_video_top">
+            <div class="theme_main_video_top_image">
+                <img src="/assets/images/static/way2.jpg" alt="">
+            </div>
         </div>
-    </div>
-    <div class="theme_main_video_bottom">
-        <h4 class="theme_main_video_bottom_title">Название видео</h4>
-        <div class="theme_main_video_bottom_desc">Описание видеоролика про то, как перетягивали
-            салон в автомобиле
-        </div>
-        <div class="theme_main_video_bottom_price">500 рублей
+        <div class="theme_main_video_bottom">
+            <h4 class="theme_main_video_bottom_title">Название видео</h4>
+            <div class="theme_main_video_bottom_desc">Описание видеоролика про то, как перетягивали
+                салон в автомобиле
+            </div>
+            <div class="theme_main_video_bottom_price">500 рублей
+            </div>
+            <div class="theme_main_video_check">{{ Svg.icon('check', 1, 20,20) }}</div>
         </div>
     </div>
 </div>
