--- a/app/views/courses/manage/themes/theme_add.twig
+++ b/app/views/courses/manage/themes/theme_add.twig
@@ -85,7 +85,7 @@
 
             {% if edit==1 %}
                 <input type="hidden" class="element" name="action" value="process_edit">
-                <input type="hidden" class="element" name="cat_group_id" value="{{ info.catalog_id }}">
+                <input type="hidden" class="element" name="theme_id" value="{{ info.theme_id }}">
             {% else %}
                 <input type="hidden" class="element" name="action" value="process_add">
             {% endif %}
