--- a/app/views/frontend/components/header/_header.scss
+++ b/app/views/frontend/components/header/_header.scss
@@ -119,6 +119,7 @@
 
   &_link {
     &_cabinet{
+      cursor: pointer;
       color: #F28402;
       border: 1px solid #F28402;
       border-radius: 40px;
