--- a/app/views/courses/manage/catalog/add.twig
+++ b/app/views/courses/manage/catalog/add.twig
@@ -39,7 +39,7 @@
 
             {% if edit==1 %}
                 <input type="hidden" class="element" name="action" value="process_edit">
-                <input type="hidden" class="element" name="cat_group_id" value="{{ info.catalog_id }}">
+                <input type="hidden" class="element" name="catalog_id" value="{{ info.catalog_id }}">
             {% else %}
                 <input type="hidden" class="element" name="action" value="process_add">
             {% endif %}
