--- a/app/views/courses/manage/themes/theme_add.twig
+++ b/app/views/courses/manage/themes/theme_add.twig
@@ -79,7 +79,7 @@
                     Описание курса:
                 </div>
                 <div class="value">
-                    <textarea class="element rich">{{ info.theme_desc }}</textarea>
+                    <textarea class="element rich" name="theme_desc">{{ info.theme_desc }}</textarea>
                 </div>
             </div>
 
