--- a/app/views/frontend/components/video_thumb/video_thumb.twig
+++ b/app/views/frontend/components/video_thumb/video_thumb.twig
@@ -4,17 +4,16 @@
     <div class="video_item ">
         <div class="video_item_top">
             <div class="video_item_top_image">
-                <img src="/assets/images/static/way2.jpg" alt="">
+                <img src="{{ video.video_icon_url }}" alt="">
             </div>
         </div>
         <div class="video_item_bottom">
             <div class="video_item_bottom_heads">
-                <h4 class="video_item_title">Название видео</h4>
-                <div class="video_item_desc">Описание видеоролика про то, как перетягивали
-                    салон в автомобиле
+                <h4 class="video_item_title">{{video.video_title}}</h4>
+                <div class="video_item_desc">{{video.video_desc}}
                 </div>
             </div>
-            <div class="video_item_price">500 рублей
+            <div class="video_item_price">{{video.video_price}} рублей
             </div>
             <div class="video_item_check">{{ Svg.icon('check', 1, 20,20) }}</div>
         </div>
