--- a/app/views/frontend/sections/theme_item/theme_item.twig
+++ b/app/views/frontend/sections/theme_item/theme_item.twig
@@ -4,23 +4,37 @@
         <div class="container">
             <div class="theme_wrapper">
                 <div class="theme_wrapper_videos">
-                    <div class="theme_title"><h3>Перетяжка рулей</h3></div>
+                    <div class="theme_title"><h3>{{ theme.theme_title }}</h3></div>
                     <div class="theme_desc">
-                        <p>Данный курс содержит общее видео и пошло поехало описание Данный курс содержит общее видео и
-                            пошло поехало описание Данный курс содержит общее видео и пошло поехало описание Данный курс
-                            содержит общее видео и пошло поехало описание Данный курс содержит общее видео и пошло
-                            поехало описание</p>
+                        {{ theme.theme_desc|raw }}
                     </div>
                     <div class="theme_videos_wrapper">
-                        {% include 'frontend/components/video_thumb/video_thumb_main.twig' %}
-                        <div class="theme_videos_block">
-                            <div class="theme_videos_block_title">Тестовый блок</div>
-                            <div class="theme_videos">
-                                {% for i in 1..3 %}
-                                    {% include 'frontend/components/video_thumb/video_thumb.twig' %}
-                                {% endfor %}
+                        {% if main_video.video_id %}
+                            {% include 'frontend/components/video_thumb/video_thumb_main.twig' %}
+                        {% endif %}
+                        {% if blocks|length %}
+                            {% for block in blocks %}
+                                <div class="theme_videos_block">
+                                    <div class="theme_videos_block_title">{{ block.block_title }}</div>
+                                    <div class="theme_videos">
+                                        {% for video in block.videos %}
+                                            {% include 'frontend/components/video_thumb/video_thumb.twig' %}
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+
+                        {% if videos|length %}
+                            <div class="theme_videos_block">
+                                <div class="theme_videos">
+                                    {% for video in videos %}
+                                        {% include 'frontend/components/video_thumb/video_thumb.twig' %}
+                                    {% endfor %}
+                                </div>
                             </div>
-                        </div>
+                        {% endif %}
+
                     </div>
                 </div>
                 <div class="theme_wrapper_sidebar">
@@ -95,4 +109,10 @@
 
         </div>
     </div>
+</div>
+
+
+
+<div id="modal_tarif" class="modal modal_tarif mfp-hide white-popup animated fast" style="min-width: 800px;">
+    <div id="iframe_here"></div>
 </div>
