--- a/app/views/frontend/sections/theme_item/_theme_item.scss
+++ b/app/views/frontend/sections/theme_item/_theme_item.scss
@@ -78,6 +78,22 @@
   }
   &_videos{
     padding-left: 25px;
+    min-height: 300px;
+    max-height: 300px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    &::-webkit-scrollbar {
+      width: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 6px #1F2128;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #f28402;
+      box-shadow: inset 0 0 0 2.5px #1F2128;
+    }
     li{
       display: flex;
       align-items: center;
@@ -94,21 +110,42 @@
     }
   }
   &_testimonial{
+    $root:&;
+    &_content{
+      display: none;
+      position: absolute;
+      border: 1px solid #F28402;
+      text-align: center;
+      width: 280px;
+      line-height: 25px;
+      right: 20px;
+      z-index: 121;
+      padding: 25px;
+      background: #1F2128;
+    }
     &_icon{
       width: 20px;
       height: 20px;
       cursor: pointer;
       border-radius: 20px;
       background: white;
+
       color: #272931;
       font-weight: bold;
       display: flex;
       align-items: center;
       justify-content: center;
       padding: 5px;
+      &:hover{
+        & + #{$root}_content{
+          display: block !important;
+        }
+      }
     }
+
   }
   &_button{
+    $root:&;
     cursor:pointer;
     margin: 30px 0 50px;
     padding: 14px;
@@ -122,6 +159,15 @@
     &:hover{
       box-shadow: 0px 0px 20px rgba(242, 132, 2, 0.5);
       background: linear-gradient(180deg, #F28402 0%, #F3AC6A 100%);
+    }
+    &_disabled{
+      cursor:default;
+      background: linear-gradient(90deg, #7a7a7a 0%, #bababa 100%) !important;
+
+      &:hover{
+        box-shadow: 0 0 0 0;
+        background: linear-gradient(90deg, #7a7a7a 0%, #bababa 100%);
+      }
     }
     &_green{
       background: linear-gradient(90deg, #108631 0%, #32BE2F 100%);
