--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -6560,7 +6560,18 @@ footer {
         line-height: 150%;
         color: #FFFFFF; }
   .cart_info_videos {
-    padding-left: 25px; }
+    padding-left: 25px;
+    min-height: 300px;
+    max-height: 300px;
+    overflow-x: hidden;
+    overflow-y: scroll; }
+    .cart_info_videos::-webkit-scrollbar {
+      width: 10px; }
+    .cart_info_videos::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 6px #1F2128; }
+    .cart_info_videos::-webkit-scrollbar-thumb {
+      background-color: #f28402;
+      box-shadow: inset 0 0 0 2.5px #1F2128; }
     .cart_info_videos li {
       display: -ms-flexbox;
       display: flex;
@@ -6574,6 +6585,17 @@ footer {
         height: 1px; }
       .cart_info_videos li:last-child {
         margin-bottom: 0; }
+  .cart_info_testimonial_content {
+    display: none;
+    position: absolute;
+    border: 1px solid #F28402;
+    text-align: center;
+    width: 280px;
+    line-height: 25px;
+    right: 20px;
+    z-index: 121;
+    padding: 25px;
+    background: #1F2128; }
   .cart_info_testimonial_icon {
     width: 20px;
     height: 20px;
@@ -6589,6 +6611,8 @@ footer {
     -ms-flex-pack: center;
         justify-content: center;
     padding: 5px; }
+    .cart_info_testimonial_icon:hover + .cart_info_testimonial_content {
+      display: block !important; }
   .cart_info_button {
     cursor: pointer;
     margin: 30px 0 50px;
@@ -6604,6 +6628,12 @@ footer {
     .cart_info_button:hover {
       box-shadow: 0px 0px 20px rgba(242, 132, 2, 0.5);
       background: linear-gradient(180deg, #F28402 0%, #F3AC6A 100%); }
+    .cart_info_button_disabled {
+      cursor: default;
+      background: linear-gradient(90deg, #7a7a7a 0%, #bababa 100%) !important; }
+      .cart_info_button_disabled:hover {
+        box-shadow: 0 0 0 0;
+        background: linear-gradient(90deg, #7a7a7a 0%, #bababa 100%); }
     .cart_info_button_green {
       background: linear-gradient(90deg, #108631 0%, #32BE2F 100%);
       border-radius: 40px; }
